--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,8 @@ dependencies {
             'com.codeborne:selenide:6.4.0',
             'com.github.javafaker:javafaker:1.0.2',
             "org.aeonbits.owner:owner:1.0.4",
-            'io.qameta.allure:allure-selenide:2.20.1'
+            'io.qameta.allure:allure-selenide:2.20.1',
+            'org.aspectj:aspectjweaver:1.9.8.M1'
     )
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
@@ -40,7 +41,7 @@ test {
 }
 
 tasks.withType(Test) {
-//    systemProperties(System.getProperties())
+    systemProperties(System.getProperties())
     useJUnitPlatform()
 }
 
