--- a/build.gradle
+++ b/build.gradle
@@ -20,20 +20,24 @@ allure {
     }
 }
 
+compileTestJava {
+    options.encoding = 'UTF-8'
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
     testImplementation(
-            'org.junit.jupiter:junit-jupiter-api:5.8.1',
-            'com.codeborne:selenide:6.4.0',
+            'org.junit.jupiter:junit-jupiter:5.9.2',
+            'com.codeborne:selenide:6.12.3',
             'com.github.javafaker:javafaker:1.0.2',
-            "org.aeonbits.owner:owner:1.0.4",
-            'io.qameta.allure:allure-selenide:2.20.1',
+            'org.aeonbits.owner:owner:1.0.12',
+            'io.qameta.allure:allure-selenide:2.21.0',
+            'org.aspectj:aspectjweaver:1.9.19',
             'org.aspectj:aspectjweaver:1.9.8.M1'
     )
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
 test {
@@ -47,6 +51,6 @@ tasks.withType(Test) {
 
 task project_test(type: Test) {
     useJUnitPlatform {
-        includeTags("project1")
+        includeTags("project")
     }
 }
